# embedded-research-runtime

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: err_concept.md  implementation_plan.md  usage_scenarios.md
src/err/: cli.py
src/err/core/: context.py  theme.py
src/err/models/: project.py  run.py  theme.py
src/err/storage/: project_store.py  run_store.py  theme_store.py
src/err/web/: _dev.py  app.py
src/err/web/routes/: themes.py
src/err/web/static/: style.css
src/err/web/templates/: _sidebar.html  base.html  project_edit.html  project_view.html  theme_list.html
